vlib/v/checker/tests/unreachable_code.vv
fn foo() int {
	return if 1 == 1 { 1 } else { 2 }
	a := 1
	println(a)
}
fn main() {
	foo()
}
